--- a/repo_sync.yml
+++ b/repo_sync.yml
@@ -23,6 +23,6 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/MayoBlueSky/My-Actions.git"
-          source_branch: "master"
-          destination_branch: "master"
+          source_branch: "main"
+          destination_branch: "main"
           github_token: ${{ secrets.PAT || github.event.client_payload.PAT }}
