--- a/repo_sync.yml
+++ b/repo_sync.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          persist-credentials: false
+          persist-credentials: true
 
       - name: sync scripts
         uses: repo-sync/github-sync@v2
